# youtube-channel-link-scraper

./: .gitignore  README.md  pyproject.toml  sample_subscriptions.csv  scrape_links.py
.github/workflows/: ci.yml  scrape.yml
docs/: links.json
tests/: test_link_parser.py  test_subscriptions.py  test_urls.py
