[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-channel-link-scraper"
version = "1.0.0"
description = "Scrape external links from YouTube channel About pages via Google Takeout subscriptions CSV"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }

[tool.setuptools]
py-modules = ["scrape_links"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
